--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <!--bootstrap Css-->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 
+    <!-- coding icons  -->
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+
     <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet">
 
@@ -93,14 +96,14 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-12">
                             <div class="text-center mx-auto home_text_personal">
-                                <h4 class="home-top-title text-white mb-3">Hello</h4>
-                                <h1 class="home_title text-white text-capitalize mb-0">I'M a Full Stack Developer</h1>
-                                <div class="home_text_details">
+                                <h4 class="home-top-title text-white mb-3">Tarun Padath</h4>
+                                <h1 class="home_title text-white text-capitalize mb-0">Full Stack Developer</h1>
+                                <!-- <div class="home_text_details">
                                     <p class="home_subtitle mx-auto mt-4 mb-0 pb-2">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </p>
-                                </div>
+                                </div> -->
 
                                 <div class="home_btn_manage mt-4 pt-2">
-                                    <a href="#" class="btn btn_outline_custom btn-rounded">Hire me</a>
+                                    <a href="#" class="btn btn_outline_custom btn-rounded">Resume</a>
                                 </div>
                             </div>
                         </div>
@@ -119,7 +122,7 @@
                 <div class="col-lg-12">
                     <div class="text-center">
                         <h3>About <span class="font-weight-bold text_custom">Me</span></h3>
-                        <p class="text-muted mx-auto section_subtitle mt-3">It is a long established fact that a reader will be of a page when established fact looking at its layout.</p>
+                        <!-- <p class="text-muted mx-auto section_subtitle mt-3">It is a long established fact that a reader will be of a page when established fact looking at its layout.</p> -->
                     </div>
                 </div>
             </div>
@@ -127,8 +130,8 @@
             <div class="row mt-5 vertical_content_manage">
                 <div class="col-lg-8">
                     <div class="about_content_info mt-3">
-                        <h4>Hello! <span class="text-custom font-weight-bold">I'M Coble Okla.</span></h4>
-                        <h5 class="mt-3">I'M Digital Designer based USA. Specialize in UI/UX Design.</h5>
+                        <h4>Hello! <span class="text_custom font-weight-bold">I'M Tarun Padath.</span></h4>
+                        <h5 class="mt-3">I'M a Full Stack Developer based in California.</h5>
 
                         <p class="text-muted mt-4">Product designer who craft beatiful, minimal and user interface design. i spand my most of time inderstading your requerment.</p>
 
@@ -156,7 +159,7 @@
 
                 <div class="col-lg-4">
                     <div class="mt-3">
-                        <img src="images/about_me.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                        <img src="images/body-profile.jpg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
                     </div>
                 </div>
             </div>
@@ -170,8 +173,8 @@
             <div class="row justify-content-center">
                 <div class="col-lg-12">
                     <div class="text-center">
-                        <h3>I Will Provide <span class="font-weight-bold text_custom">Services</span></h3>
-                        <p class="text-muted mx-auto section_subtitle mt-3">It is a long established fact that a reader will be of a page when established fact looking at its layout.</p>
+                        <h3><span class="font-weight-bold text_custom">Technical Skills</span></h3>
+                        <!-- <p class="text-muted mx-auto section_subtitle mt-3">It is a long established fact that a reader will be of a page when established fact looking at its layout.</p> -->
                     </div>
                 </div>
             </div>
@@ -180,10 +183,11 @@
                 <div class="col-lg-4">
                     <div class="text-center services_box p-4 mt-3">
                         <div class="service_icon text-center">
-                            <i class="pe-7s-leaf"></i>
+                            <i class="devicon-html5-plain"></i>
+                            <!-- <i class="pe-7s-leaf"></i> -->
                         </div>
                         <div class="service_content mt-4">
-                            <h5 class="font-weight-bold">Graphic Design</h5>
+                            <h5 class="font-weight-bold">HTML5</h5>
                             <p class="mt-3 text-muted mb-0">There is now an abundance of readable dummy texts. These are usually used required purely. </p>
                         </div>
                     </div>
@@ -192,10 +196,11 @@
                 <div class="col-lg-4">
                     <div class="text-center services_box p-4 mt-3">
                         <div class="service_icon text-center">
-                            <i class="pe-7s-volume1"></i>
+                            <i class="devicon-javascript-plain"></i>
+                            <!-- <i class="pe-7s-volume1"></i> -->
                         </div>
                         <div class="service_content mt-4">
-                            <h5 class="font-weight-bold">Unlimited Color</h5>
+                            <h5 class="font-weight-bold">ES5/ES6</h5>
                             <p class="mt-3 text-muted mb-0">There is now an abundance of readable dummy texts. These are usually used required purely. </p>
                         </div>
                     </div>
@@ -204,10 +209,11 @@
                 <div class="col-lg-4">
                     <div class="text-center services_box p-4 mt-3">
                         <div class="service_icon text-center">
-                            <i class="pe-7s-like"></i>
+                            <i class="devicon-react-original"></i>
+                            <!-- <i class="pe-7s-like"></i> -->
                         </div>
                         <div class="service_content mt-4">
-                            <h5 class="font-weight-bold">Media Marketing</h5>
+                            <h5 class="font-weight-bold">React</h5>
                             <p class="mt-3 text-muted mb-0">There is now an abundance of readable dummy texts. These are usually used required purely. </p>
                         </div>
                     </div>
@@ -218,10 +224,12 @@
                 <div class="col-lg-4">
                     <div class="text-center services_box p-4 mt-3">
                         <div class="service_icon text-center">
-                            <i class="pe-7s-piggy"></i>
+                            <!-- <i class="pe-7s-piggy"></i> -->
+                            <i class="devicon-php-plain"></i>
+
                         </div>
                         <div class="service_content mt-4">
-                            <h5 class="font-weight-bold">Unlimited Wifi</h5>
+                            <h5 class="font-weight-bold">PHP</h5>
                             <p class="mt-3 text-muted mb-0">There is now an abundance of readable dummy texts. These are usually used required purely. </p>
                         </div>
                     </div>
@@ -230,10 +238,11 @@
                 <div class="col-lg-4">
                     <div class="text-center services_box p-4 mt-3">
                         <div class="service_icon text-center">
-                            <i class="pe-7s-cloud-download"></i>
+                            <i class="devicon-mysql-plain"></i>
+                            <!-- <i class="pe-7s-cloud-download"></i> -->
                         </div>
                         <div class="service_content mt-4">
-                            <h5 class="font-weight-bold">Responsive Design</h5>
+                            <h5 class="font-weight-bold">MySQL</h5>
                             <p class="mt-3 text-muted mb-0">There is now an abundance of readable dummy texts. These are usually used required purely. </p>
                         </div>
                     </div>
@@ -242,10 +251,11 @@
                 <div class="col-lg-4">
                     <div class="text-center services_box p-4 mt-3">
                         <div class="service_icon text-center">
-                            <i class="pe-7s-tools"></i>
+                            <!-- <i class="pe-7s-tools"></i> -->
+                            <i class="devicon-jquery-plain"></i>
                         </div>
                         <div class="service_content mt-4">
-                            <h5 class="font-weight-bold">Easy to customize</h5>
+                            <h5 class="font-weight-bold">jQuery</h5>
                             <p class="mt-3 text-muted mb-0">There is now an abundance of readable dummy texts. These are usually used required purely. </p>
                         </div>
                     </div>
@@ -438,8 +448,8 @@
             <div class="row justify-content-center">
                 <div class="col-lg-12">
                     <div class="text-center">
-                        <h3>Our<span class="font-weight-bold text_custom"> Work</span></h3>
-                        <p class="text-muted mx-auto section_subtitle mt-3">It is a long established fact that a reader will be of a page when established fact looking at its layout.</p>
+                        <h3><span class="font-weight-bold text_custom"> Projects</span></h3>
+                        <!-- <p class="text-muted mx-auto section_subtitle mt-3">It is a long established fact that a reader will be of a page when established fact looking at its layout.</p> -->
                     </div>
                 </div>
             </div>
