--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <div class="container">
             <!-- LOGO -->
            <a class="navbar-brand logo" href="index.html">
-                <img src="images/logo.png" alt="" class="img-fluid logo-light">
-                <img src="images/logo-dark.png" alt="" class="img-fluid logo-dark">
+                <img src="images/white_logo_transparent_background.png" alt="" class="img-fluid logo-light">
+                <img src="images/dark_logo_transparent_background.png" alt="" class="img-fluid logo-dark">
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,29 +57,29 @@
                         <a href="#about" class="nav-link">About</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#services" class="nav-link">Services</a>
+                        <a href="#services" class="nav-link">Skills</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a href="#education" class="nav-link">Education</a>
                     </li>
                     <li class="nav-item">
                         <a href="#client" class="nav-link">Client's</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a href="#portfolio" class="nav-link">Portfolio</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a href="#blog" class="nav-link">Blog</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a href="#contact" class="nav-link">Contact</a>
                     </li>
                 </ul>
                 <div>
                     <ul class="text-right list-unstyled list-inline mb-0 social_menu">
-                        <li class="list-inline-item"><a href=""><i class="mdi mdi-twitter"></i></a></li>
-                        <li class="list-inline-item"><a href=""><i class="mdi mdi-instagram"></i></a></li>
-                        <li class="list-inline-item"><a href=""><i class="mdi mdi-facebook"></i></a></li>
+                        <li class="list-inline-item"><a href=""><i class="mdi mdi-gmail"></i></a></li>
+                        <li class="list-inline-item"><a href=""><i class="devicon-github-plain"></i></a></li>
+                        <li class="list-inline-item"><a href=""><i class="mdi mdi-linkedin"></i></a></li>
                     </ul>
                 </div>
             </div>
@@ -266,7 +266,7 @@
     <!-- End Services -->
 
     <!-- Start EduCation and Experiance -->
-    <section class="section_all" id="education">
+    <!-- <section class="section_all" id="education">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -344,7 +344,7 @@
 
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- End Education and Experiance -->
 
     <!-- Start CTA -->
@@ -366,7 +366,7 @@
     <!-- End CTA -->
 
     <!-- Start Testimonial -->
-    <section class="section_all" id="client">
+    <!-- <section class="section_all" id="client">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-12">
@@ -438,7 +438,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- End Testimonial -->
 
 
@@ -456,58 +456,60 @@
             <div class="row mt-5">
                 <ul class="col list-unstyled list-inline mb-0 text-uppercase work_menu" id="menu-filter">
                     <li class="list-inline-item"><a class="active" data-filter="*">All</a></li>
-                    <li class="list-inline-item"><a class="" data-filter=".seo">Seo</a></li>
-                    <li class="list-inline-item"><a class="" data-filter=".webdesign">Webdesign</a></li>
-                    <li class="list-inline-item"><a class="" data-filter=".WORK">WORK</a></li>
-                    <li class="list-inline-item"><a class="" data-filter=".wordpress">Wordpress</a></li>
+                    <li class="list-inline-item"><a class="" data-filter=".full-stack">Full Stack</a></li>
+                    <li class="list-inline-item"><a class="" data-filter=".front-end">Front End</a></li>
+                    <!-- <li class="list-inline-item"><a class="" data-filter=".WORK">WORK</a></li>
+                    <li class="list-inline-item"><a class="" data-filter=".wordpress">Wordpress</a></li> -->
                 </ul>
             </div>
         </div>
         <div class="container">
             <div class="row mt-5 work-filter">
-                <div class="col-lg-4 work_item webdesign wordpress">
+                <div class="col-lg-4 work_item full-stack">
                     <div class="work_box">
-                        <a href="images/portfolio/portfolio-1.jpg" class="img-zoom">
+                        <a href="images/portfolio/snow-ware-full-stack-1.png" class="img-zoom">
                             <div class="work_img">
-                                <img src="images/portfolio/portfolio-1.jpg" alt="" class="img-fluid mx-auto d-block"/>
+                                <img src="images/portfolio/snow-ware-full-stack-1.png" alt="" class="img-fluid mx-auto d-block"/>
                             </div>
                         </a>
                         <div class="work_detail text-center">
-                            <h4 class="font-weight-bold">Open Imagination</h4>
-                            <p class="text-muted mb-0">Media, Icons</p>
+                            <h4 class="font-weight-bold">Snow Ware</h4>
+                            <p class="text-muted mb-0">A snowboard themed e-commerce website made with React.js, PHP, HTML5, and CSS3 for CRUD operations.</p>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-lg-4 work_item WORK webdesign seo">
+                <div class="col-lg-4 work_item full-stack">
                     <div class="work_box">
-                        <a href="images/portfolio/portfolio-2.jpg" class="img-zoom">
+                        <a href="images/portfolio/anteater-express-full-stack-2.png" class="img-zoom">
                             <div class="work_img">
-                                <img src="images/portfolio/portfolio-2.jpg" alt="" class="img-fluid mx-auto d-block"/>
+                                <img src="images/portfolio/anteater-express-full-stack-2.png" alt="" class="img-fluid mx-auto d-block"/>
                             </div>
                         </a>
                         <div class="work_detail text-center">
-                            <h4 class="font-weight-bold">Locked Steel Gate</h4>
-                            <p class="text-muted mb-0">Illustrations</p>
+                            <h4 class="font-weight-bold">UCI VERMINLINGUA (ANTEATER) EXPRESS</h4>
+                            <p class="text-muted mb-0">An internal application developed for UC Irvine's Anteater Express (campus bus system) to facilitate the process of
+                            scheduling and managing shuttles, shuttle routes and employees.
+                            Responsible for: Swaping and posting shifts amongst drivers. Notification system for drivers and admins</p>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-lg-4 work_item seo wordpress">
+                <div class="col-lg-4 work_item front-end">
                     <div class="work_box">
-                        <a href="images/portfolio/portfolio-3.jpg" class="img-zoom">
+                        <a href="images/portfolio/samurai-match-front-end-1.png" class="img-zoom">
                             <div class="work_img">
-                                <img src="images/portfolio/portfolio-3.jpg" alt="" class="img-fluid mx-auto d-block"/>
+                                <img src="images/portfolio/samurai-match-front-end-1.png" alt="" class="img-fluid mx-auto d-block"/>
                             </div>
                         </a>
                         <div class="work_detail text-center">
-                            <h4 class="font-weight-bold">Console Activity</h4>
-                             <p class="text-muted mb-0">UI Elements, Media</p>
+                            <h4 class="font-weight-bold">Samurai Jack Memory Match</h4>
+                             <p class="text-muted mb-0">A “Samurai Jack” themed card-matching memory game with live updating statistics. Implemented HTML, CSS, and Flexbox to develop a responsive mobile and desktop adaptability. Built logic and operations with jQuery and JavaScript.</p>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-lg-4 work_item wordpress WORK webdesign">
+                <!-- <div class="col-lg-4 work_item wordpress WORK webdesign">
                     <div class="work_box">
                         <a href="images/portfolio/portfolio-4.jpg" class="img-zoom">
                             <div class="work_img">
@@ -519,9 +521,9 @@
                             <p class="text-muted mb-0">Graphics, UI Elements</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="col-lg-4 work_item seo webdesign">
+                <!-- <div class="col-lg-4 work_item seo webdesign">
                     <div class="work_box">
                         <a href="images/portfolio/portfolio-5.jpg" class="img-zoom">
                             <div class="work_img">
@@ -533,9 +535,9 @@
                             <p class="text-muted mb-0">Icons, Illustrations</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="col-lg-4 work_item devlopment webdesign">
+                <!-- <div class="col-lg-4 work_item devlopment webdesign">
                     <div class="work_box">
                         <a href="images/portfolio/portfolio-6.jpg" class="img-zoom">
                             <div class="work_img">
@@ -547,7 +549,7 @@
                             <p class="text-muted mb-0">Illustrations, Graphics</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
             <div class="row">
                 <div class="col-lg-12">
@@ -561,7 +563,7 @@
     <!-- End Portfolio -->
 
     <!-- Start Blog -->
-    <section class="section_all" id="blog">
+    <!-- <section class="section_all" id="blog">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -617,7 +619,7 @@
 
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- End Blog -->
 
     <!-- Start contact  -->
@@ -687,14 +689,10 @@
                 <div class="col-lg-12">
                     <div class="text-center text-white about_social_icons">
                         <ul class="list-unstyled list-inline mb-3">
-                            <li class="list-inline-item"><a href="#"><i class="mdi mdi-facebook"></i></a></li>
-                            <li class="list-inline-item"><a href="#"><i class="mdi mdi-twitter"></i></a></li>
-                            <li class="list-inline-item"><a href="#"><i class="mdi mdi-google-plus"></i></a></li>
-                            <li class="list-inline-item"><a href="#"><i class="mdi mdi-apple"></i></a></li>
-                            <li class="list-inline-item"><a href="#"><i class="mdi mdi-dribbble"></i></a></li>
+                            <li class="list-inline-item"><a href="#"><i class="mdi mdi-gmail"></i></a></li>
+                            <li class="list-inline-item"><a href="#"><i class="devicon-github-plain"></i></a></li>
                             <li class="list-inline-item"><a href="#"><i class="mdi mdi-linkedin"></i></a></li>
                         </ul>
-                        <p class="text-muted mb-0">&copy; Copyright | Okla 2018 All Right Reserved</p>
                     </div>
                 </div>
             </div>
