Made personal fav icon

--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Okla - Responsive Bootstrap 4 Personal Template</title>
+    <title>Tarun Padath Portfolio</title>
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <meta name="author" content="VBThemes" />
 
-    <link rel="shortcut icon" href="images/favicon.ico">
+    <!-- Fav Icon for different clients -->
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="manifest" href="images/site.webmanifest">
+    <link rel="mask-icon" href="images/safari-pinned-tab.svg" color="#d01539">
+    <meta name="msapplication-TileColor" content="#b91d47">
+    <meta name="theme-color" content="#ffffff">
+
+    <!-- <link rel="shortcut icon" href="images/favicon.ico"> -->
 
     <!-- Magnific-popup -->
     <link rel="stylesheet" href="css/magnific-popup.css">
