Took off free lance section

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
     <!-- End Education and Experiance -->
 
     <!-- Start CTA -->
-    <section class="section_all bg_cta_personal_img">
+    <!-- <section class="section_all bg_cta_personal_img">
         <div class="bg_overlay_cover_on"></div>
         <div class="container">
             <div class="row">
@@ -371,7 +371,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- End CTA -->
 
     <!-- Start Testimonial -->
