--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
                         <p class="text-muted mt-2">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
 
-                        <div class="about_social_icons mt-4">
+                        <!-- <div class="about_social_icons mt-4">
                             <ul class="list-unstyled">
                                 <li class="list-inline-item"><a href="#"><i class="mdi mdi-facebook"></i></a></li>
                                 <li class="list-inline-item"><a href="#"><i class="mdi mdi-twitter"></i></a></li>
@@ -157,11 +157,11 @@
                                 <li class="list-inline-item"><a href="#"><i class="mdi mdi-dribbble"></i></a></li>
                                 <li class="list-inline-item"><a href="#"><i class="mdi mdi-linkedin"></i></a></li>
                             </ul>
-                        </div>
+                        </div> -->
 
-                        <div class="mt-4">
+                        <!-- <div class="mt-4">
                             <a href="#" class="btn btn_custom">Download cv</a>
-                        </div>
+                        </div> -->
 
                     </div>
                 </div>
@@ -560,13 +560,13 @@
                     </div>
                 </div> -->
             </div>
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-lg-12">
                     <div class="text-center mt-5">
                         <a href="#" class="btn btn_custom">More Work</a>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
     <!-- End Portfolio -->
