Added live and source buttons

--- a/index.html
+++ b/index.html
@@ -483,7 +483,17 @@
                         </a>
                         <div class="work_detail text-center">
                             <h4 class="font-weight-bold">Snow Ware</h4>
-                            <p class="text-muted mb-0">A snowboard themed e-commerce website made with React.js, PHP, HTML5, and CSS3 for CRUD operations.</p>
+                            <p class="text-muted">A snowboard themed e-commerce website made with React.js, PHP, HTML5, and CSS3 for CRUD
+                                        operations.</p>
+                            <div class="row">
+                                <div class="col-6">
+                                    <a href="https://snowware.tarunpadath.com/" class="btn btn_outline_custom_2 btn-rounded">Live</a>
+                                </div>
+                                <div class="col-6">
+                                    <button class="btn btn_outline_custom_3 btn-rounded">Source</button>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </div>
