Added button to memory match

--- a/index.html
+++ b/index.html
@@ -485,12 +485,12 @@
                             <h4 class="font-weight-bold">Snow Ware</h4>
                             <p class="text-muted">A snowboard themed e-commerce website made with React.js, PHP, HTML5, and CSS3 for CRUD
                                         operations.</p>
-                            <div class="row">
+                            <div class="row mt-auto">
                                 <div class="col-6">
                                     <a href="https://snowware.tarunpadath.com/" class="btn btn_outline_custom_2 btn-rounded">Live</a>
                                 </div>
                                 <div class="col-6">
-                                    <button class="btn btn_outline_custom_3 btn-rounded">Source</button>
+                                    <a href="https://github.com/taruntula/" class="btn btn_outline_custom_3 btn-rounded">Source</a>
                                 </div>
                             </div>
 
@@ -523,7 +523,15 @@
                         </a>
                         <div class="work_detail text-center">
                             <h4 class="font-weight-bold">Samurai Jack Memory Match</h4>
-                             <p class="text-muted mb-0">A “Samurai Jack” themed card-matching memory game with live updating statistics. Implemented HTML, CSS, and Flexbox to develop a responsive mobile and desktop adaptability. Built logic and operations with jQuery and JavaScript.</p>
+                             <p class="text-muted mb-0">A card-matching memory game with live updating statistics. Implemented HTML, CSS, and Flexbox to develop a responsive mobile and desktop adaptability. Built logic and operations with jQuery and JavaScript.</p>
+                             <div class="row mt-auto">
+                                 <div class="col-6">
+                                    <a href="https://memorymatch.tarunpadath.com/" class="btn btn_outline_custom_2 btn-rounded">Live</a>
+                                 </div>
+                                 <div class="col-6">
+                                    <a href="https://github.com/taruntula/" class="btn btn_outline_custom_3 btn-rounded">Source</a>
+                                 </div>
+                             </div>
                         </div>
                     </div>
                 </div>
