Added demo video for anteater express

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div>
                     <ul class="text-right list-unstyled list-inline mb-0 social_menu">
                         <li class="list-inline-item"><a href=""><i class="mdi mdi-gmail"></i></a></li>
-                        <li class="list-inline-item"><a href=""><i class="devicon-github-plain"></i></a></li>
+                        <li class="list-inline-item"><a href="https://github.com/taruntula"><i class="devicon-github-plain"></i></a></li>
                         <li class="list-inline-item"><a href=""><i class="mdi mdi-linkedin"></i></a></li>
                     </ul>
                 </div>
@@ -506,10 +506,14 @@
                             </div>
                         </a>
                         <div class="work_detail text-center">
-                            <h4 class="font-weight-bold">UCI VERMINLINGUA (ANTEATER) EXPRESS</h4>
+                            <h6 class="font-weight-bold">ANTEATER EXPRESS</h6>
                             <p class="text-muted mb-0">An internal application developed for UC Irvine's Anteater Express (campus bus system) to facilitate the process of
-                            scheduling and managing shuttles, shuttle routes and employees.
-                            Responsible for: Swaping and posting shifts amongst drivers. Notification system for drivers and admins</p>
+                            scheduling and managing shuttles, shuttle routes and employees.</p>
+                            <div class="row mt-auto justify-content-center">
+                                <div class="col-8">
+                                    <a href="https://youtu.be/mN-dYsr9fzE" class="btn btn_outline_custom_2 btn_rounded">Demo Video</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
