--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div>
                     <ul class="text-right list-unstyled list-inline mb-0 social_menu">
                         <li class="list-inline-item"><a href=""><i class="mdi mdi-gmail"></i></a></li>
-                        <li class="list-inline-item"><a href="https://github.com/taruntula"><i class="devicon-github-plain"></i></a></li>
+                        <li class="list-inline-item"><a href="" ><i class="devicon-github-plain"></i></a></li>
                         <li class="list-inline-item"><a href=""><i class="mdi mdi-linkedin"></i></a></li>
                     </ul>
                 </div>
@@ -721,7 +721,7 @@
                     <div class="text-center text-white about_social_icons">
                         <ul class="list-unstyled list-inline mb-3">
                             <li class="list-inline-item"><a href="#"><i class="mdi mdi-gmail"></i></a></li>
-                            <li class="list-inline-item"><a href="#"><i class="devicon-github-plain"></i></a></li>
+                            <li class="list-inline-item"><a href="https://github.com/taruntula"><i class="devicon-github-plain"></i></a></li>
                             <li class="list-inline-item"><a href="#"><i class="mdi mdi-linkedin"></i></a></li>
                         </ul>
                     </div>
