--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
                     </li>
                 </ul>
                 <div>
-                    <ul class="text-right list-unstyled list-inline mb-0 social_menu">
+                    <!-- <ul class="text-right list-unstyled list-inline mb-0 social_menu">
                         <li class="list-inline-item"><a href=""><i class="mdi mdi-gmail"></i></a></li>
                         <li class="list-inline-item"><a href="" ><i class="devicon-github-plain"></i></a></li>
                         <li class="list-inline-item"><a href=""><i class="mdi mdi-linkedin"></i></a></li>
-                    </ul>
+                    </ul> -->
                 </div>
             </div>
         </div>
@@ -112,7 +112,7 @@
                                 </div> -->
 
                                 <div class="home_btn_manage mt-4 pt-2">
-                                    <a href="#" class="btn btn_outline_custom btn-rounded">Resume</a>
+                                    <a href="https://drive.google.com/file/d/1sk6XuwQ2xB-gKNNaOFrt_f-hexVNK0KD/view?usp=sharing" class="btn btn_outline_custom btn-rounded">Resume</a>
                                 </div>
                             </div>
                         </div>
@@ -142,7 +142,7 @@
                         <h4>Hello! <span class="text_custom font-weight-bold">I'M Tarun Padath.</span></h4>
                         <h5 class="mt-3">I'M a Full Stack Developer based in California.</h5>
 
-                        <p class="text-muted mt-4">Product designer who craft beatiful, minimal and user interface design. i spand my most of time inderstading your requerment.</p>
+                        <p class="text-muted mt-4">I found my love for programming at a young age when I started using different APIs to automate simple tasks. Due to my hatred for manual labor and love f</p>
 
                         <p class="text-muted mt-2">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
 
@@ -490,7 +490,7 @@
                                     <a href="https://snowware.tarunpadath.com/" class="btn btn_outline_custom_2 btn-rounded">Live</a>
                                 </div>
                                 <div class="col-6">
-                                    <a href="https://github.com/taruntula/" class="btn btn_outline_custom_3 btn-rounded">Source</a>
+                                    <a href="https://github.com/taruntula/snow-ware.git" class="btn btn_outline_custom_3 btn-rounded">Source</a>
                                 </div>
                             </div>
 
@@ -533,7 +533,7 @@
                                     <a href="https://memorymatch.tarunpadath.com/" class="btn btn_outline_custom_2 btn-rounded">Live</a>
                                  </div>
                                  <div class="col-6">
-                                    <a href="https://github.com/taruntula/" class="btn btn_outline_custom_3 btn-rounded">Source</a>
+                                    <a href="https://github.com/taruntula/memory-match.git" class="btn btn_outline_custom_3 btn-rounded">Source</a>
                                  </div>
                              </div>
                         </div>
@@ -592,66 +592,6 @@
         </div>
     </section>
     <!-- End Portfolio -->
-
-    <!-- Start Blog -->
-    <!-- <section class="section_all" id="blog">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="text-center">
-                        <h3>Our<span class="font-weight-bold text_custom"> Recent Blog</span></h3>
-                        <p class="text-muted mx-auto section_subtitle mt-3">It is a long established fact that a reader will be of a page when established fact looking at its layout.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row mt-5">
-                <div class="col-lg-4 mt-3">
-                    <div class="blog_box_contant p-2">
-                        <div class="blog_image">
-                            <img src="images/blog/blog-1.jpg" alt="Image" class="img-fluid d-block mx-auto" />
-                        </div>
-                        <div class="blog_box_detail mt-3">
-                            <h5 class="mb-0 font-weight-bold"><a href="#" class="text-dark">Aliquem erat Volupat</a></h5>
-                            <p class="label h6 mb-0 mt-3">1 Aug 2018</p>
-                            <p class="text-muted mt-3 mb-0">It is a long established fact that a reader will be distracted by the readable content of a page.</p>
-                            <span class="h6 mb-0 "><a href="#" class="text-dark mt-3 d-block font-weight-bold">Learn More...</a></span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 mt-3">
-                    <div class="blog_box_contant p-2">
-                        <div class="blog_image">
-                            <img src="images/blog/blog-2.jpg" alt="Image" class="img-fluid d-block mx-auto" />
-                        </div>
-                        <div class="blog_box_detail mt-3">
-                            <h5 class="mb-0 font-weight-bold"><a href="#" class="text-dark">Contrary to popular belief</a></h5>
-                            <p class="label h6 mb-0 mt-3">1 Aug 2018</p>
-                            <p class="text-muted mt-3 mb-0">It is a long established fact that a reader will be distracted by the readable content of a page.</p>
-                            <span class="h6 mb-0 "><a href="#" class="text-dark mt-3 d-block font-weight-bold">Learn More...</a></span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 mt-3">
-                    <div class="blog_box_contant p-2">
-                        <div class="blog_image">
-                            <img src="images/blog/blog-3.jpg" alt="Image" class="img-fluid d-block mx-auto" />
-                        </div>
-                        <div class="blog_box_detail mt-3">
-                            <h5 class="mb-0 font-weight-bold"><a href="#" class="text-dark">Put title for single Blog</a></h5>
-                            <p class="label h6 mb-0 mt-3">1 Aug 2018</p>
-                            <p class="text-muted mt-3 mb-0">It is a long established fact that a reader will be distracted by the readable content of a page.</p>
-                            <span class="h6 mb-0 "><a href="#" class="text-dark mt-3 d-block font-weight-bold">Learn More...</a></span>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </section> -->
-    <!-- End Blog -->
 
     <!-- Start contact  -->
     <section class="section_all bg_contact" id="contact">
