--- a/index.html
+++ b/index.html
@@ -140,13 +140,13 @@
                 <div class="col-lg-8">
                     <div class="about_content_info mt-3">
                         <h4>Hello! <span class="text_custom font-weight-bold">I'M Tarun Padath.</span></h4>
-                        <h5 class="mt-3">I'M a Full Stack Developer based in California.</h5>
+                        <h5 class="mt-3">I'm a Full Stack Developer based in California.</h5>
 
-                        <p class="text-muted mt-4">I found my love for programming at a young age when I started using different APIs to automate simple tasks. Due to my hatred for manual labor and love f</p>
+                        <p class="text-muted mt-4">My name is Tarun Padath and I'm a full-stack developer currently seeking new opportunities. Starting from a young age I've always been fascinated with technology and longed to be part of the industry that's rapidly changing our world. I feel like programming has given me a peek into this tech world and hope to see more as I keep learning. Nothing excites me more than working on new projects and seeing my skills progress day by day. When I'm not glued to a computer screen you can see me snowboarding, playing pick up soccer, or watching the lakers win. If you have any question please feel free to contact me. </p>
 
-                        <p class="text-muted mt-2">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                        <!-- <p class="text-muted mt-2">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
 
-                        <p class="text-muted mt-2">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                        <p class="text-muted mt-2">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p> -->
 
                         <!-- <div class="about_social_icons mt-4">
                             <ul class="list-unstyled">
