--- a/index.html
+++ b/index.html
@@ -123,7 +123,12 @@
                         <h4>Hello! <span class="text_custom font-weight-bold">I'M Tarun Padath.</span></h4>
                         <h5 class="mt-3">I'm a Full Stack Developer based in California.</h5>
 
-                        <p class="text-muted mt-4">My name is Tarun Padath and I'm a full-stack developer currently seeking new opportunities. Starting from a young age I've always been fascinated with technology and longed to be part of the industry that's rapidly changing our world. I feel like programming has given me a peek into this tech world and hope to see more as I keep learning. Nothing excites me more than working on new projects and seeing my skills progress day by day. When I'm not glued to a computer screen you can see me snowboarding, playing pick up soccer, or watching the lakers win. If you have any question please feel free to contact me. </p>
+                        <p class="text-muted mt-4">My name is Tarun Padath and I'm a full-stack developer currently seeking new opportunities. Starting from a young age,
+                        I've always been fascinated with technology and longed to be part of the industry that's rapidly changing our world. I
+                        feel like programming has given me a peek into this tech world, and I hope to see more as I continue learning. Nothing
+                        excites me more than working on new projects and seeing my skills progress day by day. When I'm not glued to a computer
+                        screen, you can see me snowboarding, playing pick up soccer, or watching the Lakers win. If you have any questions,
+                        please feel free to contact me.</p>
 
                     </div>
                 </div>
