Fixed magnify popup on upper half of portfolio screen

--- a/index.html
+++ b/index.html
@@ -313,11 +313,11 @@
             <div class="row mt-5 work-filter">
                 <div class="col-lg-4 work_item full-stack">
                     <div class="work_box">
-                        <a href="images/portfolio/snow-ware-full-stack-1.png" class="img-zoom">
+                        <!-- <a href="images/portfolio/snow-ware-full-stack-1.png" class="img-zoom"> -->
                             <div class="work_img">
                                 <img src="images/portfolio/snow-ware-full-stack-1.png" alt="" class="img-fluid mx-auto d-block"/>
                             </div>
-                        </a>
+                        <!-- </a> -->
                         <div class="work_detail text-center">
                             <h4 class="font-weight-bold">Snow Ware</h4>
                             <p class="text-muted">A snowboard themed e-commerce website made with React.js, PHP, HTML5, and CSS3 for CRUD
@@ -337,11 +337,11 @@
 
                 <div class="col-lg-4 work_item full-stack">
                     <div class="work_box">
-                        <a href="images/portfolio/anteater-express-full-stack-2.png" class="img-zoom">
+                        <!-- <a href="images/portfolio/anteater-express-full-stack-2.png" class="img-zoom"> -->
                             <div class="work_img">
                                 <img src="images/portfolio/anteater-express-full-stack-2.png" alt="" class="img-fluid mx-auto d-block"/>
                             </div>
-                        </a>
+                        <!-- </a> -->
                         <div class="work_detail text-center">
                             <h6 class="font-weight-bold">ANTEATER EXPRESS</h6>
                             <p class="text-muted mb-0">An internal application developed for UC Irvine's Anteater Express (campus bus system) to facilitate the process of
@@ -357,11 +357,11 @@
 
                 <div class="col-lg-4 work_item front-end">
                     <div class="work_box">
-                        <a href="images/portfolio/samurai-match-front-end-1.png" class="img-zoom">
+                        <!-- <a href="images/portfolio/samurai-match-front-end-1.png" class="img-zoom"> -->
                             <div class="work_img">
                                 <img src="images/portfolio/samurai-match-front-end-1.png" alt="" class="img-fluid mx-auto d-block"/>
                             </div>
-                        </a>
+                        <!-- </a> -->
                         <div class="work_detail text-center">
                             <h4 class="font-weight-bold">Samurai Jack Memory Match</h4>
                              <p class="text-muted mb-0">A card-matching memory game with live updating statistics. Implemented HTML, CSS, and Flexbox to develop a responsive mobile and desktop adaptability. Built logic and operations with jQuery and JavaScript.</p>
@@ -468,7 +468,7 @@
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/masonry.pkgd.min.js"></script>
     <script src="js/isotope.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
+    <!-- <script src="js/jquery.magnific-popup.min.js"></script> -->
     <script src="js/scrollspy.min.js"></script>
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/particles.js"></script>
