--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/masonry.pkgd.min.js"></script>
     <script src="js/isotope.js"></script>
-    <!-- <script src="js/jquery.magnific-popup.min.js"></script> -->
+    <script src="js/jquery.magnific-popup.min.js"></script>
     <script src="js/scrollspy.min.js"></script>
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/particles.js"></script>
